--- a/article/94226.html
+++ b/article/94226.html
@@ -278,18 +278,19 @@
                         <div id="sticky-rightbar">
                             <div class="row g-img-fit">
                                 <h2 class="b-h-title b-h-title--home px-3"> Новости (Экономика) </h2>
-                                <div class="col-12 mb-3"> <a href="94154.html"
-                                        title="Должен знать каждый мужчина: врач-уролог рассказал, как справиться с часто встречающимися заболеваниями">
-                                        <div class="d-flex flex-column justify-content-between h-100"> <img
-                                                src="https://primpress.ru/img/articles/1129221425051dp.jpg"
-                                                alt="Должен знать каждый мужчина: врач-уролог рассказал, как справиться с часто встречающимися заболеваниями"
-                                                class="b-slider-card__img b-slider-card__img--fixed">
-                                            <div class="b-slider-card__text">
-                                                <div class="b-slider-card__title g-color--darkgrey font-weight-bold">
-                                                    Должен знать каждый мужчина: врач-уролог рассказал, как
-                                                    справиться с часто встречающимися заболеваниями </div>
-                                                <div class="b-slider-card__date g-color--grey mt-auto"> 29
-                                                    ноября 2022, 13:10 </div>
+                                <div class="col-12 mb-3"> <a href="94964.html"
+                                        title="Приморцы нашли следы огромного тигра на берегу моря">
+                                        <div
+                                            class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
+                                            <div class="b-region-home__img"> <img
+                                                    src="https://primpress.ru/img/template/1px.png"
+                                                    data-src="https://primpress.ru/img/articles/1216221421011dp.jpg"
+                                                    alt="Приморцы нашли следы огромного тигра на берегу моря"> </div>
+                                            <div class="b-region-home__text">
+                                                <div class="g-color--darkgrey font-weight-bold"> Приморцы нашли следы
+                                                    огромного тигра на берегу моря </div>
+                                            </div>
+                                            <div class="b-region-home__date g-color--grey mt-auto"> Сегодня, 15:30
                                             </div>
                                         </div>
                                     </a> </div>
@@ -346,36 +347,24 @@
                                             </a> </div>
                                     </div>
                                 </div>
-                                <div class="col-12 mb-3"> <a href="94099.html"
-                                        title="Чтобы не стало хуже: врач из Приморья рассказала о профилактике остеохондроза">
-                                        <div class="d-flex flex-column justify-content-between h-100"> <img
-                                                src="https://primpress.ru/img/articles/1128221155411dp.jpg"
-                                                alt="Чтобы не стало хуже: врач из Приморья рассказала о профилактике остеохондроза"
-                                                class="b-slider-card__img b-slider-card__img--fixed">
-                                            <div class="b-slider-card__text">
-                                                <div class="b-slider-card__title g-color--darkgrey font-weight-bold">
-                                                    Чтобы не стало хуже: врач из Приморья рассказала о
-                                                    профилактике остеохондроза </div>
-                                                <div class="b-slider-card__date g-color--grey mt-auto"> 28
-                                                    ноября 2022, 18:10 </div>
+                                <div class="col-12 mb-3"> <a href="94226.html"
+                                        title="В Приморье бюджет Территориального фонда обязательного медицинского страхования в ближайшие годы заметно вырастет">
+                                        <div
+                                            class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
+                                            <div class="b-region-home__img"> <img
+                                                    src="https://primpress.ru/img/template/1px.png"
+                                                    data-src="https://primpress.ru/img/articles/1130221228071dp.jpg"
+                                                    alt="В Приморье бюджет Территориального фонда обязательного медицинского страхования в ближайшие годы заметно вырастет">
                                             </div>
+                                            <div class="b-region-home__text">
+                                                <div class="g-color--darkgrey font-weight-bold"> В Приморье бюджет
+                                                    Территориального фонда обязательного медицинского страхования в
+                                                    ближайшие годы заметно вырастет </div>
+                                            </div>
+                                            <div class="b-region-home__date g-color--grey mt-auto"> 30 ноября 2022,
+                                                15:05 </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"><a href="94154.html"
-                                        title="Должен знать каждый мужчина: врач-уролог рассказал, как справиться с часто встречающимися заболеваниями">
-                                        <div class="d-flex flex-column justify-content-between h-100"> <img
-                                                src="https://primpress.ru/img/articles/1129221425051dp.jpg"
-                                                alt="Должен знать каждый мужчина: врач-уролог рассказал, как справиться с часто встречающимися заболеваниями"
-                                                class="b-slider-card__img b-slider-card__img--fixed">
-                                            <div class="b-slider-card__text">
-                                                <div class="b-slider-card__title g-color--darkgrey font-weight-bold">
-                                                    Должен знать каждый мужчина: врач-уролог рассказал, как
-                                                    справиться с часто встречающимися заболеваниями </div>
-                                                <div class="b-slider-card__date g-color--grey mt-auto"> 29
-                                                    ноября 2022, 13:10 </div>
-                                            </div>
-                                        </div>
-                                    </a></div>
                                 <div class="col-12 mb-3"> <a href="94949.html"
                                         title="Стащил и сгрыз: в соцсетях появились жуткие кадры с участием тигра, снятые в Приморье">
                                         <div
@@ -392,6 +381,39 @@
                                             </div>
                                             <div class="b-region-home__date g-color--grey mt-auto"> Сегодня, 12:00
                                             </div>
+                                        </div>
+                                    </a> </div>
+                                <div class="col-12 mb-3"> <a href="94885.html"
+                                        title="Работники АЗС в Приморье обомлели от того, что сделала приехавшая девушка">
+                                        <div
+                                            class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
+                                            <div class="b-region-home__img"> <img
+                                                    src="https://primpress.ru/img/template/1px.png"
+                                                    data-src="https://primpress.ru/img/articles/1215220337431dp.jpg"
+                                                    alt="Работники АЗС в Приморье обомлели от того, что сделала приехавшая девушка">
+                                            </div>
+                                            <div class="b-region-home__text">
+                                                <div class="g-color--darkgrey font-weight-bold"> Работники АЗС в
+                                                    Приморье обомлели от того, что сделала приехавшая девушка </div>
+                                            </div>
+                                            <div class="b-region-home__date g-color--grey mt-auto"> 15 декабря 2022,
+                                                03:40 </div>
+                                        </div>
+                                    </a> </div>
+                                    <div class="col-12 mb-3"> <a href="94864.html"
+                                        title="Во Владивостоке загорелась квартира">
+                                        <div
+                                            class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
+                                            <div class="b-region-home__img"> <img
+                                                    src="https://primpress.ru/img/template/1px.png"
+                                                    data-src="https://primpress.ru/img/articles/1214221350241dp.jpg"
+                                                    alt="Во Владивостоке загорелась квартира"> </div>
+                                            <div class="b-region-home__text">
+                                                <div class="g-color--darkgrey font-weight-bold"> Во Владивостоке
+                                                    загорелась квартира </div>
+                                            </div>
+                                            <div class="b-region-home__date g-color--grey mt-auto"> 14 декабря 2022,
+                                                13:50 </div>
                                         </div>
                                     </a> </div>
                             </div>
