--- a/health.html
+++ b/health.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="img/template/logo_light.svg" />
     <meta property="og:url" content="https://primpress.ru" />
-    <meta property="og:site_name" content="PRIMPRESS.RU" />
+    <meta property="og:site_name" content="NewPress" />
     <meta name="twitter:image" content="img/template/logo_light.svg" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@PrimVl" />
@@ -109,7 +109,7 @@
                     <div class="col-9 g-img-fit">
                         <div id="sticky-content">
                             <h1 class="b-h-title b-h-title--home"> Здоровье </h1> <a
-                                href="/index.html"
+                                href="/article/94681.html"
                                 title="Названа фраза, которая предотвратит любой конфликт">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
@@ -124,7 +124,7 @@
                                             что так можно избежать множества ссор </div>
                                     </div>
                                 </div>
-                            </a> <a href="/index.html"
+                            </a> <a href="/article/94360.html"
                                 title="Россиянам рассказали действенный способ привыкнуть к холоду">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
@@ -139,7 +139,7 @@
                                             от чего это зависит </div>
                                     </div>
                                 </div>
-                            </a> <a href="/index.html"
+                            </a> <a href="/article/93787.html"
                                 title="Эксперты объяснили, чем грозит привычка откладывать будильник">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
@@ -154,7 +154,7 @@
                                             пагубно сказаться на здоровье в целом </div>
                                     </div>
                                 </div>
-                            </a> <a href="/index.html"
+                            </a> <a href="/article/93726.html"
                                 title="Врач объяснил, в каком случае женщинам лучше побриться налысо">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
@@ -169,7 +169,7 @@
                                             специалиста, мужчинам этот способ не поможет </div>
                                     </div>
                                 </div>
-                            </a> <a href="/index.html   "
+                            </a> <a href="/article/93713.html"
                                 title="Специалисты рассказали, как легко компенсировать сидячую работу">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
