--- a/politics.html
+++ b/politics.html
@@ -109,7 +109,7 @@
                     <div class="col-9 g-img-fit">
                         <div id="sticky-content">
                             <h1 class="b-h-title b-h-title--home"> Политика </h1> <a
-                                href="index.html"
+                                href="article/91580.html"
                                 title="Во Владивостоке состоялось первое заседание думы города шестого созыва">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
@@ -126,7 +126,7 @@
                                             мобилизованных граждан </div>
                                     </div>
                                 </div>
-                            </a> <a href="index.html"
+                            </a> <a href="article/91504.html"
                                 title="Попавшийся на шпионаже японский консул покидает Приморье">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
@@ -141,7 +141,7 @@
                                             подтвердили в МИД краевого центра </div>
                                     </div>
                                 </div>
-                            </a> <a href="index.html"
+                            </a> <a href="article/90636.html"
                                 title="«Это мелко...»: глава Хабаровского края вновь сделал скандальное заявление о Владивостоке">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
@@ -158,7 +158,7 @@
                                             так считает </div>
                                     </div>
                                 </div>
-                            </a> <a href="index.html"
+                            </a> <a href="article/90609.html"
                                 title="«Я предупреждал об этом»: Владимир Путин сделал важное заявление, касающееся бизнесменов">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
