--- a/news.html
+++ b/news.html
@@ -296,18 +296,18 @@
                     <div class="col-3">
                         <h5>РАЗДЕЛЫ</h5>
                         <ul class="g-link-block" itemscope itemtype="https://www.schema.org/SiteNavigationElement">
-                            <li><a href="/news" itemprop="url" title="Новости">Новости</a></li>
-                            <li><a href="/region" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
-                            <li><a href="/interview" itemprop="url" title="Гороскоп">Гороскоп</a></li>
+                            <li><a href="news.html" itemprop="url" title="Новости">Новости</a></li>
+                            <li><a href="#" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
+                            <li><a href="#" itemprop="url" title="Гороскоп">Гороскоп</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
                         <h5>РУБРИКИ</h5>
                         <ul class="g-link-block">
-                            <li><a href="/news/society" title="Общество">Общество</a></li>
-                            <li><a href="/news/economy" title="Экономика">Экономика</a></li>
-                            <li><a href="/news/politics" title="Политика">Политика</a></li>
-                            <li><a href="/news/health" title="Здоровье">Здоровье</a></li>
+                            <li><a href="society.html" title="Общество">Общество</a></li>
+                            <li><a href="economy.html" title="Экономика">Экономика</a></li>
+                            <li><a href="politics.html" title="Политика">Политика</a></li>
+                            <li><a href="health.html" title="Здоровье">Здоровье</a></li>
                         </ul>
                     </div>
                 </div>
