--- a/article/93864.html
+++ b/article/93864.html
@@ -462,97 +462,20 @@
                     <div class="col-3">
                         <h5>РАЗДЕЛЫ</h5>
                         <ul class="g-link-block" itemscope itemtype="https://www.schema.org/SiteNavigationElement">
-                            <li><a href="/news" itemprop="url" title="Новости">Новости</a></li>
-                            <li><a href="/region" itemprop="url" title="Жизнь региона">Жизнь региона</a></li>
-                            <li><a href="/interview" itemprop="url" title="Интервью">Интервью</a></li>
-                            <li><a href="/media" itemprop="url" title="Мультимедиа">Мультимедиа</a></li>
-                            <li><a href="/trends" itemprop="url" title="Образ жизни">Образ жизни</a></li>
-                            <li><a href="/culture" itemprop="url" title="Культура">Культура</a></li>
-                            <li><a href="/tests" itemprop="url" title="Тесты">Тесты</a></li>
-                            <li><a href="/cards" itemprop="url" title="Картотека">Картотека</a></li>
-                            <li><a href="/business" itemprop="url" title="Деловая среда">Деловая среда</a></li>
-                            <li><a href="/news/social" itemprop="url" title="Соцсети">Соцсети</a></li>
-                            <li><a href="/lifehacker" itemprop="url" title="Лайфхакер">ЛАЙФХАКЕР</a></li>
-                            <li><a href="/horoscope" itemprop="url" title="Гороскоп">Гороскоп</a></li>
-                            <li><a href="/tor-spv" itemprop="url" title="ТОР и СПВ">ТОР и СПВ</a></li>
-                            <li><a href="/narrative" itemprop="url" title="Листалка">Листалка</a></li>
-                            <li><a href="/khabarovsk" itemprop="url" title="Хабаровский край">Хабаровский край</a></li>
-                            <li><a href="https://primpress.ru/about.html" itemprop="url" title="О нас">О нас</a></li>
+                            <li><a href="news.html" itemprop="url" title="Новости">Новости</a></li>
+                            <li><a href="#" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
+                            <li><a href="#" itemprop="url" title="Гороскоп">Гороскоп</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
                         <h5>РУБРИКИ</h5>
                         <ul class="g-link-block">
-                            <li><a href="/news/society" title="Общество">Общество</a></li>
-                            <li><a href="/news/economy" title="Экономика">Экономика</a></li>
-                            <li><a href="/news/politics" title="Политика">Политика</a></li>
-                            <li><a href="/news/culture" title="Шоу-бизнес">Шоу-бизнес</a></li>
-                            <li><a href="/news/sport" title="Спорт">Спорт</a></li>
-                            <li><a href="/news/incidents" title="Происшествия">Происшествия</a></li>
-                            <li><a href="/news/business" title="Бизнес">Бизнес</a></li>
-                            <li><a href="/news/consumers" title="Клуб потребителей">Клуб потребителей</a></li>
-                            <li><a href="/news/health" title="Здоровье">Здоровье</a></li>
-                            <li><a href="/news/food" title="Еда">Еда</a></li>
-                            <li><a href="/news/realty" title="Недвижимость">Недвижимость</a></li>
-                            <li><a href="/news/auto" title="Авто">Авто</a></li>
-                            <li><a href="/news/russia" title="Главное в России">Главное в России</a></li>
-                            <li><a href="/news/world" title="В мире">В мире</a></li>
+                            <li><a href="society.html" title="Общество">Общество</a></li>
+                            <li><a href="economy.html" title="Экономика">Экономика</a></li>
+                            <li><a href="politics.html" title="Политика">Политика</a></li>
+                            <li><a href="health.html" title="Здоровье">Здоровье</a></li>
                         </ul>
                     </div>
-                    <div class="offset-1 col-5">
-                        <h5>PRIMPRESS в социальных сетях</h5>
-                        <ul class="g-link-block">
-                            <li> <a href="https://vk.com/primpress" target="_blank" title="Primpress в ВКонтакте"> <i
-                                        class="fa fa-vk" aria-hidden="true"></i> ВКонтакте </a> </li>
-                            <li> <a href="https://ok.ru/primpress" target="_blank" title="Primpress в Одноклассниках">
-                                    <i class="fa fa-odnoklassniki-square" aria-hidden="true"></i> Одноклассники </a>
-                            </li>
-                            <li> <a href="https://t.me/primpressru/" target="_blank" title="Primpress в Telegram"
-                                    rel="nofollow"> <i class="fa fa-telegram" aria-hidden="true"></i> Telegram </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="row footer__info">
-                    <div class="col"> На данном сайте распространяется информация сетевого издания PRIMPRESS
-                        <br>Свидетельство о регистрации СМИ ЭЛ ФС 77 - 67525, выдано Федеральной службой по надзору в
-                        сфере связи, информационных технологий и массовых коммуникаций. 18.10.2016 г. <br>Учредитель и
-                        издатель: ООО "Приморская пресса". ОГРН: 1152540009005. ИНН: 2540217241. Главный редактор:
-                        Протасов М. В. </div>
-                    <div class="col"> Адрес учредителя и редакции: <br>690106, Приморский край, г. Владивосток, пр-т
-                        Красного Знамени, д. 10, офис 301 <br>Тел.: <a href="tel:+7-423-273-30-73"
-                            class="footer__marker">8 (423) 273-30-73.</a> <br>E-mail: <a href="mailto:info@primpress.ru"
-                            title="Написать письмо" class="footer__marker">info@primpress.ru</a>
-                        <div class="b-footer__policy"> <a href="https://primpress.ru/policy.html"
-                                title="Обработка персональных данных">Политика конфиденциальности.</a> <a
-                                href="https://primpress.ru/rules.html" title="Информация об ограничениях">Правила
-                                использования информации.</a> </div>
-                    </div>
-                </div>
-                <div class="row b-footer__bottom">
-                    <div class="col-4"> <a href="https://metrika.yandex.ru/stat/?id=36404695&amp;from=informer"
-                            target="_blank" rel="nofollow"><img
-                                src="https://informer.yandex.ru/informer/36404695/3_0_999999FF_999999FF_0_uniques"
-                                style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика"
-                                title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" /></a>
-                        <script> (function (m, e, t, r, i, k, a) { m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) }; m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a) })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(36404695, "init", { clickmap: true, trackLinks: true, accurateTrackBounce: true, webvisor: true, trackHash: true }); </script>
-                        <noscript>
-                            <div><img src="https://mc.yandex.ru/watch/36404695" style="position:absolute; left:-9999px;"
-                                    alt="" /></div>
-                        </noscript>
-                        <script> (function (i, s, o, g, r, a, m) { i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga'); ga('create', 'UA-76944308-1', 'auto'); ga('send', 'pageview'); </script>
-                        <script> document.write("<a href='//www.liveinternet.ru/click' " + "target=_blank><img src='//counter.yadro.ru/hit?t15.4;r" + escape(document.referrer) + ((typeof (screen) == "undefined") ? "" : ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ? screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) + ";h" + escape(document.title.substring(0, 150)) + ";" + Math.random() + "' alt='' title='LiveInternet: показано число просмотров за 24" + " часа, посетителей за 24 часа и за сегодня' " + "border='0' width='88' height='31'><\/a>") </script>
-                        <script> var _tmr = window._tmr || (window._tmr = []); _tmr.push({ id: "3100887", type: "pageView", start: (new Date()).getTime() }); (function (d, w, id) { if (d.getElementById(id)) return; var ts = d.createElement("script"); ts.type = "text/javascript"; ts.async = true; ts.id = id; ts.src = "https://top-fwz1.mail.ru/js/code.js"; var f = function () { var s = d.getElementsByTagName("script")[0]; s.parentNode.insertBefore(ts, s); }; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "topmailru-code"); </script>
-                        <noscript>
-                            <div> <img src="https://top-fwz1.mail.ru/counter?id=3100887;js=na"
-                                    style="border:0;position:absolute;left:-9999px;" alt="Top.Mail.Ru" /> </div>
-                        </noscript>
-                    </div>
-                    <div class="col-4 text-center"> &copy; PRIMPRESS 2022 <a href="https://primpress.ru/rss.xml"
-                            target="_blank" title="RSS канал PRIMPRESS"> <i class="fa fa-rss" aria-hidden="true"></i>
-                        </a> </div>
-                    <div class="col-4 text-right"> <span class="b-age b-age--footer"
-                            title="Для аудитории 16+">16+</span> </div>
                 </div>
             </div>
             <div class="btn-to-top" id="js-to-top"> <i class="fa fa-long-arrow-up" aria-hidden="true"></i> Наверх </div>
