--- a/article/94883.html
+++ b/article/94883.html
@@ -104,7 +104,7 @@
                             <div class="row mt-3">
                                 <div class="col"> <span title="Дата публикации"> 15 декабря 2022, 12:05 </span> </div>
                                 <div class="col text-right"> <span title="Фоторграф(ы)"> <i
-                                            class="fa fa-camera-retro"></i> Екатерина Дымова / PRIMPRESS </span> </div>
+                                            class="fa fa-camera-retro" style="display: none;"></i> Екатерина Дымова / NewPress </span> </div>
                             </div>
                             <hr>
                             <div class="imagePattern_big-full g-img-fit b-main-photo-overlay-wrapper mb-3">
