--- a/article/94698.html
+++ b/article/94698.html
@@ -112,7 +112,7 @@
                             <div class="row mt-3">
                                 <div class="col"> <span title="Дата публикации"> 10 декабря 2022, 17:00 </span> </div>
                                 <div class="col text-right"> <span title="Фоторграф(ы)"> <i
-                                            class="fa fa-camera-retro"></i> Екатерина Дымова / NewPress </span> </div>
+                                            class="fa fa-camera-retro" style="display: none;"></i> Екатерина Дымова / NewPress </span> </div>
                             </div>
                             <hr>
                             <div class="imagePattern_big-full g-img-fit b-main-photo-overlay-wrapper mb-3">
