--- a/article/94221.html
+++ b/article/94221.html
@@ -425,8 +425,8 @@
                         <h5>РАЗДЕЛЫ</h5>
                         <ul class="g-link-block" itemscope itemtype="https://www.schema.org/SiteNavigationElement">
                             <li><a href="/news.html" itemprop="url" title="Новости">Новости</a></li>
-                            <li><a href="#" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
-                            <li><a href="#" itemprop="url" title="Гороскоп">Гороскоп</a></li>
+                            <li><a href="/index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
+                            <li><a href="/index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
