--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
             <div class="g-new-block">
                 <div class="row">
                     <div class="col-6">
-                        <h2 class="b-h-title b-h-title--home"> <a href="/business" title="Деловая среда">ДЕЛОВАЯ
+                        <h2 class="b-h-title b-h-title--home"> <a href="#" title="Деловая среда">ДЕЛОВАЯ
                                 СРЕДА</a> </h2>
                         <div class="b-cards g-shadow--column g-link-block--shadow-scale">
                             <div id="js-cards-slider-prev" class="b-cards__control-prev g-cursor-pointer"> <i
@@ -402,7 +402,7 @@
                             <div id="js-cards-slider-next" class="b-cards__control-next g-cursor-pointer"> <i
                                     class="fa fa-chevron-right fa-2x"></i> </div>
                             <div id="js-cards-slider" class="owl-carousel">
-                                <div class="g-img-fit"> <a href="https://primpress.ru/article/94809"
+                                <div class="g-img-fit"> <a href="#"
                                         title="Приморский ОПК отправляют на гражданку за бюджетные деньги"
                                         target="_blank"> <img
                                             src="https://primpress.ru/img/articles/1213221328071dp.jpg"
@@ -411,7 +411,7 @@
                                             деньги <div class="b-cards__subtitle"></div>
                                         </div>
                                     </a> </div>
-                                <div class="g-img-fit"> <a href="https://primpress.ru/article/94808"
+                                <div class="g-img-fit"> <a href="#"
                                         title="Клиенты ВТБ останутся без выплат: Центробанк готовится дать ответ"
                                         target="_blank"> <img
                                             src="https://primpress.ru/img/articles/1213221327051dp.jpg"
@@ -420,7 +420,7 @@
                                             готовится дать ответ <div class="b-cards__subtitle"></div>
                                         </div>
                                     </a> </div>
-                                <div class="g-img-fit"> <a href="https://primpress.ru/article/94620"
+                                <div class="g-img-fit"> <a href="#"
                                         title="Мечетин больше не контролирует Beluga Group" target="_blank"> <img
                                             src="https://primpress.ru/img/articles/1208221415561dp.jpg"
                                             alt="Мечетин больше не контролирует Beluga Group">
@@ -428,7 +428,7 @@
                                                 class="b-cards__subtitle"></div>
                                         </div>
                                     </a> </div>
-                                <div class="g-img-fit"> <a href="https://primpress.ru/article/94619"
+                                <div class="g-img-fit"> <a href="#"
                                         title="Путин: «Необходимости в дополнительной мобилизации нет»" target="_blank">
                                         <img src="https://primpress.ru/img/articles/1208221413151dp.jpg"
                                             alt="Путин: «Необходимости в дополнительной мобилизации нет»">
@@ -440,7 +440,7 @@
                         </div>
                     </div>
                     <div class="col-3">
-                        <h2 class="b-h-title b-h-title--home"> <a href="https://primpress.ru/news/russia"
+                        <h2 class="b-h-title b-h-title--home"> <a href="news.html"
                                 title="Главное в России" class="text-uppercase">Главное в России</a> </h2>
                         <div class="b-tests g-img-fit g-shadow--column g-link-block g-link-block--shadow-scale"> <a
                                 href="article/94926.html" title="В России закончились запасы популярных чипсов">
@@ -456,7 +456,7 @@
                             </a> </div>
                     </div>
                     <div class="col-3">
-                        <h2 class="b-h-title b-h-title--home"> <a href="https://primpress.ru/news/world"
+                        <h2 class="b-h-title b-h-title--home"> <a href="news.html"
                                 title="В мире">В МИРЕ</a> </h2>
                         <div class="b-tests g-img-fit g-shadow--column g-link-block g-link-block--shadow-scale"> <a
                                 href="article/94900.html"
@@ -481,7 +481,7 @@
             <div class="g-new-block">
                 <div class="row">
                     <div class="col-9">
-                        <h2 class="b-h-title b-h-title--home"> <a href="/region" title="Жизнь региона">ЖИЗНЬ РЕГИОНА</a>
+                        <h2 class="b-h-title b-h-title--home"> <a href="#" title="Жизнь региона">ЖИЗНЬ РЕГИОНА</a>
                         </h2>
                     </div>
                 </div>
@@ -787,8 +787,8 @@
                         <h5>РАЗДЕЛЫ</h5>
                         <ul class="g-link-block" itemscope itemtype="https://www.schema.org/SiteNavigationElement">
                             <li><a href="news.html" itemprop="url" title="Новости">Новости</a></li>
-                            <li><a href="#" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
-                            <li><a href="#" itemprop="url" title="Гороскоп">Гороскоп</a></li>
+                            <li><a href="/index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
+                            <li><a href="/index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
