--- a/article/94329.html
+++ b/article/94329.html
@@ -7,7 +7,7 @@
     <meta name="csrf-token" content="EtvsC5eMWICgfKhyuRGuo9rDhBhs7SHhuEWJ0RsV" />
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, user-scalable=yes">
     <meta name="robots" content="max-image-preview:large">
-    <link rel="canonical" href="https://primpress.ru/article/94329" />
+    <link rel="canonical" href="94329.html" />
     <title>2023 рубля в подарок: АТБ объявил о предновогодней акции «100% кешбэк от Кролика АТБ»</title>
     <meta name="description"
         content="В Азиатско-Тихоокеанском банке началась акция &laquo;100% кешбэк от Кролика АТБ&raquo;. Для участия нужно оформить &laquo;Универсальную&raquo; кредитную карту и совершить покупку в...">
@@ -17,8 +17,8 @@
     <meta property="og:description" content="" />
     <meta property="og:type" content="article" />
     <meta property="og:image" content="https://primpress.ru/img/articles/1202221106461dp.jpg" />
-    <meta property="og:url" content="https://primpress.ru/article/94329" />
-    <meta property="og:site_name" content="PRIMPRESS.RU" />
+    <meta property="og:url" content="94329.html" />
+    <meta property="og:site_name" content="NEWPRESS" />
     <meta name="twitter:image" content="https://primpress.ru/img/articles/1202221106461dp.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@PrimVl" />
