--- a/article/94329.html
+++ b/article/94329.html
@@ -21,7 +21,7 @@
     <meta property="og:site_name" content="NEWPRESS" />
     <meta name="twitter:image" content="https://primpress.ru/img/articles/1202221106461dp.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@PrimVl" />
+    <meta name="twitter:site" content="NEWPRESS" />
     <meta name="twitter:title"
         content="2023 рубля в подарок: АТБ объявил о предновогодней акции «100% кешбэк от Кролика АТБ»" />
     <meta name="twitter:description" content="" />
