--- a/article/94329.html
+++ b/article/94329.html
@@ -24,7 +24,7 @@
     <meta name="twitter:site" content="NEWPRESS" />
     <meta name="twitter:title"
         content="2023 рубля в подарок: АТБ объявил о предновогодней акции «100% кешбэк от Кролика АТБ»" />
-    <meta name="twitter:description" content="" />
+    <meta name="twitter:description" content="NEWPRESS" />
     <link rel="dns-prefetch" href="//fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
