--- a/article/94329.html
+++ b/article/94329.html
@@ -7,7 +7,7 @@
     <meta name="csrf-token" content="EtvsC5eMWICgfKhyuRGuo9rDhBhs7SHhuEWJ0RsV" />
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, user-scalable=yes">
     <meta name="robots" content="max-image-preview:large">
-    <link rel="canonical" href="94329.html" />
+    <!-- <link rel="canonical" href="94329.html" /> -->
     <title>2023 рубля в подарок: АТБ объявил о предновогодней акции «100% кешбэк от Кролика АТБ»</title>
     <link rel="dns-prefetch" href="//fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
