--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                                 <i class="fa fa-chevron-right" aria-hidden="true"></i>
                                 Больше новостей </span> </a>
                     </div>
-                    <div class="col-3">
+                    <!-- <div class="col-3">
                         <div class="g-shadow--column mb-3 hidden-print">
                             <div id="adfox_16691080036614701"></div>
                             <script> window.yaContextCb.push(() => { Ya.adfoxCode.create({ ownerId: 705363, containerId: 'adfox_16691080036614701', params: { p1: 'cwkax', p2: 'hxpo' } }) }) </script>
@@ -384,7 +384,7 @@
                                     вырос спрос на популярный продукт к новогоднему столу </div>
                             </div>
                         </a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="g-new-block g-img-fit text-center hidden-print">
